fixed reply spacing

--- a/sites/all/themes/lacuna_stories/sass/components/annotator.scss
+++ b/sites/all/themes/lacuna_stories/sass/components/annotator.scss
@@ -457,7 +457,7 @@ $privacy-selected: rgba(19, 149, 25, 0.74);
       */
       padding: 0px 0px 0px 10px !important;
       border-left: 1px solid black;
-      margin: -2px 0px 4px 2px;
+      margin: -1px 0px 4px 2px;
     }
 
     div:nth-child(2)::before{                               // accesses reply icon
